# spacetime_correlations

./: .gitignore  README.md  main.py  pyproject.toml
scripts/diagnosis/: events_diagnosis.py
scripts/diagnostics/: exposure_diagnostic.py  flare_diagnostic.py  sampling_diagnostic.py
scripts/montecarlo/: run_flare_injection.py  run_isotropy.py
scripts/plots/: plot_flare_injection.py
spacetimecorr/: __init__.py  analysis.py  event_sample.py  exposure.py  flare.py  observatory.py  rng.py  skywindow.py  statistics.py
spacetimecorr/io/: __init__.py  logs.py  output.py
spacetimecorr/plotting/: __init__.py  events_plots.py  exposure_plots.py  statistics_plots.py
