[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacetimecorr"
version = "0.1.0"
description = "Spacetime-correlation analysis tools for UHECR arrival directions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "astropy>=5.3",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "cartopy>=0.22",
]

[project.optional-dependencies]
skymap = [
  "healpy>=1.18",
]

[tool.setuptools.packages.find]
include = ["spacetimecorr*"]
